--- a/Content/D_Images/ImagePositionedLeft.htm
+++ b/Content/D_Images/ImagePositionedLeft.htm
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="3" MadCap:lastHeight="870" MadCap:lastWidth="515" MadCap:onlyLocalStylesheets="False">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="3" MadCap:lastHeight="636" MadCap:lastWidth="806" MadCap:onlyLocalStylesheets="False">
     <head>
     </head>
     <body>
         <h1>
             <MadCap:concept term="Images" />
-            <MadCap:keyword term="Images:positioned left" />Image Pos<img src="../Resources/Images/Bullet2.png" />itioned Left</h1>
+            <MadCap:keyword term="Images:positioned left" />Image Pos<img src="../Resources/Images/Bullet2.png" />itioned Left test</h1>
         <p>Here is some general text for a topic. Replace this with your own content. Here is some general text for a topic. Replace this with your own content.</p>
         <div class="ImagesFloatLeft">
             <p>
